--- a/src/main/webapp/listaProf.xhtml
+++ b/src/main/webapp/listaProf.xhtml
@@ -35,12 +35,12 @@
         <script type="text/javascript">
             $(document).ready(function () {
             	var table = $('#minhatable').DataTable({
-                   	"language": {
-                       	"url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json",
+            			"language": {
+                    		"url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+            			},
                     	"processing": true,
                        	"serverSide": true,
                        	"ajax": "dadosTabelaController?tabela=professor"
-                	}
             	});
             });
             
