--- a/src/main/webapp/listaAlunos.xhtml
+++ b/src/main/webapp/listaAlunos.xhtml
@@ -34,12 +34,12 @@
         <script type="text/javascript">
             $(document).ready(function () {
                 $('#minhatable').DataTable({
-                    "language": {
-                        "url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json",
-                       	"processing": true,
+	        			"language": {
+	                		"url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+	        			},
+                        "processing": true,
                         "serverSide": true,
                         "ajax": "dadosTabelaController?tabela=aluno"
-                    }
                 });
             });
             
