--- a/src/main/webapp/listaProf.xhtml
+++ b/src/main/webapp/listaProf.xhtml
@@ -2,8 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core"
       >
     <h:head>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
@@ -14,6 +12,29 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link btn-dark" href="#">Alunos<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link btn-dark" href="#">Disciplinas<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link btn-dark" href="#">Turmas<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link btn-dark" href="#">Cursos<span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
         <div class="container centro ">
             <table class="table table-hover table-bordered display" id="minhatable">
                 <thead class="thead-dark">
