backend full + add campo no json

--- a/src/main/webapp/listaTurma.xhtml
+++ b/src/main/webapp/listaTurma.xhtml
@@ -42,13 +42,13 @@
                         <th scope="col">ID</th>
                         <th scope="col">Descrição</th>
                         <th scope="col">Curso</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
             </table>
             <h:panelGrid columns="3">
-                <button type="button" class="btn btn-outline-dark">Cadastrar</button>
-                <button type="button" class="btn btn-outline-dark">Excluir</button>
-                <button type="button" class="btn btn-outline-dark">Atualizar</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='formTurma.jsp';">Cadastrar</button>
             </h:panelGrid>
         </div>
         <script type="text/javascript">
