--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,19 +16,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link btn-light" href="#">Professores<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-light" href="/eletivaWeb/faces/listaProf.xhtml">Professores<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-light" href="#">Alunos<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-light" href="/eletivaWeb/faces/listaAlunos.xhtml">Alunos<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-light" href="#">Disciplinas<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-light" href="/eletivaWeb/faces/listaDscp.xhtml">Disciplinas<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-light" href="#">Turmas<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-light" href="/eletivaWeb/faces/listaTurma.xhtml">Turmas<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-light" href="#">Cursos<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-light" href="/eletivaWeb/faces/listaCursos.xhtml">Cursos<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
