--- a/src/main/webapp/listaAlunos.xhtml
+++ b/src/main/webapp/listaAlunos.xhtml
@@ -43,13 +43,13 @@
                         <th scope="col">Nome</th>
                         <th scope="col">RA</th>
                         <th scope="col">Turma</th>
+                        <th scope="col"> </th>
+                        <th scope="col"> </th>
                     </tr>
                 </thead>
             </table>
             <h:panelGrid columns="3">
-                <button type="button" class="btn btn-outline-dark">Cadastrar</button>
-                <button type="button" class="btn btn-outline-dark">Excluir</button>
-                <button type="button" class="btn btn-outline-dark">Atualizar</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='formAluno.jsp';">Cadastrar</button>
             </h:panelGrid>
         </div>
         <script type="text/javascript">
