--- a/src/main/webapp/listaDscp.xhtml
+++ b/src/main/webapp/listaDscp.xhtml
@@ -40,17 +40,18 @@
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">ID</th>
+                         <th scope="col">Nome</th>
                         <th scope="col">Carga Horária</th>
                         <th scope="col">Ementa</th>
                         <th scope="col">Curso</th>
                         <th scope="col">Professor</th>
+                        <th scope="col"> </th>
+                        <th scope="col"> </th>
                     </tr>
                 </thead>
             </table>
             <h:panelGrid columns="3">
-                <button type="button" class="btn btn-outline-dark">Cadastrar</button>
-                <button type="button" class="btn btn-outline-dark">Excluir</button>
-                <button type="button" class="btn btn-outline-dark">Atualizar</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='formDscp.jsp';">Cadastrar</button>
             </h:panelGrid>
         </div>
         <script type="text/javascript">
