--- a/src/main/webapp/listaProf.xhtml
+++ b/src/main/webapp/listaProf.xhtml
@@ -1,71 +1,72 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      >
-    <h:head>
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="css/mystyle.css" rel="stylesheet" type="text/css"/>
-        <script src ="https://code.jquery.com/jquery-3.5.1.js"></script>
-        <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" />
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <div>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Alunos<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Disciplinas<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Turmas<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Cursos<span class="sr-only">(current)</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <div class="container centro ">
-            <table class="table table-hover table-bordered display" id="minhatable">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Nome</th>
-                        <th scope="col">Titulação</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-            <h:panelGrid columns="3">
-                <button type="button" class="btn btn-outline-dark">Cadastrar</button>
-                <button type="button" class="btn btn-outline-dark">Excluir</button>
-                <button type="button" class="btn btn-outline-dark">Atualizar</button>
-            </h:panelGrid>
-        </div>
-        <script type="text/javascript">
-            $(document).ready(function () {
-            	var table = $('#minhatable').DataTable({
-            			"language": {
-                    		"url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
-            			},
-                    	"processing": true,
-                       	"serverSide": true,
-                       	"ajax": "dadosTabelaController?tabela=professor"
-            	});
-            });
-            
-        </script>
-    </h:body>
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
+<h:head>
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+	<link href="css/mystyle.css" rel="stylesheet" type="text/css" />
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script
+		src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+	<link rel="stylesheet"
+		href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" />
+	<title>Facelet Title</title>
+</h:head>
+<h:body>
+	<div>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active"><a class="nav-item nav-link active"
+					href="#">Home<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item active"><a class="nav-link btn-dark"
+					href="#">Alunos<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item active"><a class="nav-link btn-dark"
+					href="#">Disciplinas<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item active"><a class="nav-link btn-dark"
+					href="#">Turmas<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item active"><a class="nav-link btn-dark"
+					href="#">Cursos<span class="sr-only">(current)</span></a></li>
+			</ul>
+		</div>
+		</nav>
+	</div>
+	<div class="container centro ">
+		<table class="table table-hover table-bordered display"
+			id="minhatable">
+			<thead class="thead-dark">
+				<tr>
+					<th scope="col">ID</th>
+					<th scope="col">Nome</th>
+					<th scope="col">Titulação</th>
+					<th scope="col"> </th>
+					<th scope="col"> </th>
+				</tr>
+
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
+		<h:panelGrid columns="3">
+			<button type="button" class="btn btn-outline-dark"	onclick="location.href='formProf1.jsp';">Cadastrar</button>
+		</h:panelGrid>
+	</div>
+	<script type="text/javascript">
+		$(document)
+				.ready(
+						function() {
+							var table = $('#minhatable')
+									.DataTable(
+											{
+												"language" : {
+													"url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+												},
+												"processing" : true,
+												"serverSide" : true,
+												"ajax" : "dadosTabelaController?tabela=professor"
+											});
+						});
+	</script>
+</h:body>
 </html>
 
