Correção do título das páginas

--- a/src/main/webapp/listaProf.xhtml
+++ b/src/main/webapp/listaProf.xhtml
@@ -10,7 +10,7 @@
 		src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
 	<link rel="stylesheet"
 		href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" />
-	<title>Facelet Title</title>
+	<title>Prossiga - Professores</title>
 </h:head>
 <h:body>
 	<div>
