--- a/src/main/webapp/listaCursos.xhtml
+++ b/src/main/webapp/listaCursos.xhtml
@@ -9,7 +9,7 @@
         <script src ="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" />
-        <title>Facelet Title</title>
+        <title>Prossiga - Cursos</title>
     </h:head>
     <h:body>
         <div>
