--- a/src/main/webapp/listaCursos.xhtml
+++ b/src/main/webapp/listaCursos.xhtml
@@ -17,19 +17,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link active" href="..">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Professores<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-dark" href="listaProf.xhtml">Professores<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Alunos<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-dark" href="listaAlunos.xhtml">Alunos<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Disciplinas<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-dark" href="listaDscp.xhtml">Disciplinas<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link btn-dark" href="#">Turmas<span class="sr-only">(current)</span></a>
+                            <a class="nav-link btn-dark" href="listaTurma.xhtml">Turmas<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
