--- a/src/main/webapp/listaProf.xhtml
+++ b/src/main/webapp/listaProf.xhtml
@@ -18,15 +18,15 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active"><a class="nav-item nav-link active"
-					href="#">Home<span class="sr-only">(current)</span></a></li>
+					href="..">Home<span class="sr-only">(current)</span></a></li>
 				<li class="nav-item active"><a class="nav-link btn-dark"
-					href="#">Alunos<span class="sr-only">(current)</span></a></li>
+					href="listaAlunos.xhtml">Alunos<span class="sr-only">(current)</span></a></li>
 				<li class="nav-item active"><a class="nav-link btn-dark"
-					href="#">Disciplinas<span class="sr-only">(current)</span></a></li>
+					href="listaDscp.xhtml">Disciplinas<span class="sr-only">(current)</span></a></li>
 				<li class="nav-item active"><a class="nav-link btn-dark"
-					href="#">Turmas<span class="sr-only">(current)</span></a></li>
+					href="listaTurma.xhtml">Turmas<span class="sr-only">(current)</span></a></li>
 				<li class="nav-item active"><a class="nav-link btn-dark"
-					href="#">Cursos<span class="sr-only">(current)</span></a></li>
+					href="listaCursos.xhtml">Cursos<span class="sr-only">(current)</span></a></li>
 			</ul>
 		</div>
 		</nav>
@@ -54,13 +54,13 @@
 	<script type="text/javascript">
             $(document).ready(function () {
                 $('#minhatable').DataTable({
-	            		"language": {
-													"url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
-												},
-                       	"processing": true,
-                        "ajax": "dadosTabelaController?tabela=professor"
-											});
-						});
+					"language": {
+						"url" : "//cdn.datatables.net/plug-ins/1.10.21/i18n/Portuguese-Brasil.json"
+					},
+					"processing": true,
+					"ajax": "dadosTabelaController?tabela=professor"
+				});
+			});
 	</script>
 </h:body>
 </html>
